# matrx-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MODULE_README.md  Makefile  PYRIGHT.md  README.md  SCHEMA_GENERATION.md  TASKS.md  _test_new_imports.py  api-endpoints.md  database_registry.py  entrypoint.sh  makemigrations.py  orm-limit-migrations.md  pyproject.toml  pyrightconfig.json  run_migrations.py  test_imports.py
.github/workflows/: deploy-dev.yml  deploy-production.yml  publish.yml
agents/: MODULE_README.md  cache.py  manager.py  resolver.py  types.py  variables.py
agents/tests/: agent_example.py  agent_test.py  test_variable_application.py
app/: MODULE_README.md  config.py  main.py
app/core/: ai_task.py  exceptions.py  middleware.py  response.py  sentry.py
app/middleware/: auth.py
app/models/: agent.py  chat.py  conversation.py  tool.py
app/routers/: agent.py  chat.py  conversation.py  health.py  tool.py
client/: __init__.py  ai_requests.py  cache.py  errors.py  recovery_logic.py  stream_protocol.py  system_agents.py  thinking_config.py  timing.py  tool_call_tracking.py  translators.py  unified_client.py  usage.py
config/: MODULE_README.md  __init__.py  config_utils.py  extra_config.py  media_config.py  message_config.py  tools_config.py  unified_config.py  unified_content.py  usage_config.py
context/: MODULE_README.md  app_context.py  console_emitter.py  events.py  stream_emitter.py
conversation/: __init__.py  conversation_resolver.py  cx_agent_memory.py  cx_conversation.py  cx_managers.py  cx_media.py  cx_message.py  cx_request.py  cx_user_request.py  gate.py  persistence.py  rebuild.py
database/: __init__.py  matrx_orm.yaml  run_migrations.py  tmp53msjjh5.yaml
database/custom/: ai_model_manager.py
database/main/: models.py
db/: MODULE_README.md  SCHEMA_GENERATION.md  models.py  run_migrations.py
db/custom/: MODULE_README.md  __init__.py  ai_model_manager.py  conversation_gate.py  conversation_rebuild.py  cx_managers.py  persistence.py
db/helpers/: auto_config.py
db/managers/: MODULE_README.md  __init__.py  ai_model.py  ai_provider.py  content_blocks.py  cx_agent_memory.py  cx_conversation.py  cx_media.py  cx_message.py  cx_request.py  cx_tool_call.py  cx_user_request.py  prompt_builtins.py  prompts.py  shortcut_categories.py  table_data.py  tools.py  user_tables.py
docs/: external-tool-integration.md
instructions/: MODULE_README.md  matrx_fetcher.py  pattern_parser.py
instructions/docs/: README.md
instructions/tests/: user_table_data_test.py
matrx_ai/: __init__.py
matrx_ai/agent_runners/: MODULE_README.md  __init__.py  research.py
matrx_ai/agents/: MODULE_README.md  __init__.py  cache.py  definition.py  manager.py  resolver.py  response_parser.py  types.py  variables.py
matrx_ai/app/: MODULE_README.md  config.py  main.py
matrx_ai/client_mode/: __init__.py  api_client.py  config.py
matrx_ai/config/: MODULE_README.md  __init__.py  enums.py  extra_config.py  finish_reason.py  llm_params.py  media_config.py  message_config.py  thinking_config.py  tools_config.py  tts_config.py  unified_config.py  unified_content.py  usage_config.py
matrx_ai/context/: MODULE_README.md  __init__.py  _log.py  app_context.py  console_emitter.py  emitter_protocol.py  events.py  stream_emitter.py
matrx_ai/db/: MODULE_README.md  __init__.py  matrx_orm.yaml  models.py  run_migrations.py
matrx_ai/instructions/: MODULE_README.md  __init__.py  content_blocks_manager.py  core.py  matrx_fetcher.py  pattern_parser.py
matrx_ai/media/: MODULE_README.md  __init__.py  media_persistence.py
matrx_ai/orchestrator/: MODULE_README.md  __init__.py  concurrent_engine.py  executor.py  parallel_executor.py  recovery_logic.py  requests.py  tracking.py
matrx_ai/processing/: MODULE_README.md  __init__.py
matrx_ai/providers/: MODULE_README.md  __init__.py  errors.py  unified_client.py
matrx_ai/tools/: MODULE_README.md  NAMING_OVERHAUL.md  TOOLS_AUDIT_REPORT.md  __init__.py  agent_tool.py  executor.py  external_handlers.py  external_mcp.py  (+8 more)
media/: __init__.py  mime_utils.py  persistence.py
migrations/: 0001_baseline.py
models/: __init__.py  ai_model_base.py  ai_model_manager.py
orchestrator/: MODULE_README.md  __init__.py  executor.py  recovery_logic.py  requests.py  tracking.py
processing/: MODULE_README.md  __init__.py
prompts/: TODO.md  __init__.py  agent.py  cache.py  manager.py  session.py  types.py  variables.py
providers/: MODULE_README.md  __init__.py  anthropic_api.py  cerebras_api.py  google_api.py  groq_api.py  openai_api.py  together_api.py  unified_client.py  xai_api.py
scripts/: MODULE_README.md  _rewrite_imports.py  generate_types.py  publish.sh  release.sh  sync_from_aidream.py  sync_template.py
shared/: MODULE_README.md  __init__.py  file_handler.py  json_utils.py  supabase_client.py
templates/matrx-service-core/: .env.example  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
templates/matrx-service-core/matrx_service/: __init__.py
templates/matrx-service-core/matrx_service/app/: config.py  main.py
templates/matrx-service-core/matrx_service/app/core/: ai_task.py  cancellation.py  exceptions.py  middleware.py  response.py  sentry.py  streaming.py
templates/matrx-service-core/matrx_service/app/dependencies/: auth.py
templates/matrx-service-core/matrx_service/app/middleware/: auth.py
templates/matrx-service-core/matrx_service/app/routers/: health.py
templates/matrx-service-core/matrx_service/client/: __init__.py  service_client.py
templates/matrx-service-core/matrx_service/context/: __init__.py  _log.py  app_context.py  console_emitter.py  emitter_protocol.py  events.py  stream_emitter.py
templates/matrx-service-core/tests/: test_context.py  test_events.py
tests/: MODULE_README.md  conftest.py
tools/: MODULE_README.md  __init__.py  agent_tool.py  browser_sessions.py  executor.py  external_mcp.py  guardrails.py  handle_tool_calls.py  lifecycle.py  logger.py  models.py  registry.py  streaming.py  tools_db.py
utils/: MODULE_README.md  __init__.py  cache.py
(+319 files in other folders)
