[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matrx_ai"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "matrx-ai"
version = "0.1.2"
description = "Matrx AI Engine — unified AI orchestration backend with multi-provider LLM support, streaming, tool execution, and conversation persistence."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matrx", email = "admin@aimatrx.com" }
]
maintainers = [
    { name = "Matrx", email = "admin@aimatrx.com" }
]
keywords = [
    "ai",
    "llm",
    "fastapi",
    "openai",
    "anthropic",
    "agents",
    "orchestration",
    "streaming",
    "tools",
    "supabase",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
requires-python = ">=3.13"
dependencies = [
    # --- Core HTTP & validation ---
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    # --- AI providers ---
    "anthropic",
    "openai",
    "google-genai",
    "cerebras-cloud-sdk",
    "groq",
    "together",
    "xai-sdk",
    # --- Supabase & database ---
    "supabase",
    # --- Matrx ecosystem ---
    "matrx-utils>=1.0.9",
    "matrx-orm>=3.0.9",
    # --- Utilities ---
    "rich",
    "tiktoken",
    "aiofiles",
    "pip>=26.0.1",
]

[project.urls]
Homepage = "https://github.com/armanisadeghi/matrx-ai"
Repository = "https://github.com/armanisadeghi/matrx-ai"
Issues = "https://github.com/armanisadeghi/matrx-ai/issues"

[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "uvloop>=0.21.0",
    "sse-starlette>=2.2.0",
    "orjson>=3.10.0",
]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[project.scripts]
matrx-ai-server = "matrx_ai.app.main:start"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["templates/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
exclude = ["templates/"]
venvPath = "."
venv = ".venv"
reportCallIssue = "none"
reportArgumentType = "none"
reportOperatorIssue = "none"
reportAttributeAccessIssue = "none"
reportIndexIssue = "none"
reportReturnType = "none"
reportMissingTypeArgument = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python3"
python-version = "3.13"
