[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matrx_ai"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project]
name = "matrx-ai"
dynamic = ["version"]
description = "Matrx AI Engine — unified AI orchestration backend with multi-provider LLM support, streaming, tool execution, and conversation persistence."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matrx", email = "admin@aimatrx.com" }
]
maintainers = [
    { name = "Matrx", email = "admin@aimatrx.com" }
]
keywords = [
    "ai",
    "llm",
    "fastapi",
    "openai",
    "anthropic",
    "agents",
    "orchestration",
    "streaming",
    "tools",
    "supabase",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
requires-python = ">=3.13"
dependencies = [
    # --- Core HTTP & validation ---
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    # --- AI providers ---
    "anthropic",
    "openai",
    "google-genai",
    "cerebras-cloud-sdk",
    "groq",
    "together",
    "xai-sdk",
    "elevenlabs",
    # --- Supabase & database ---
    "supabase",
    # --- Matrx ecosystem ---
    "matrx-utils>=1.0.19",
    "matrx-orm>=3.0.32",
    # --- Utilities ---
    "rich",
    "tiktoken",
    "aiofiles",
    "pip>=26.0.1",
    "pytest>=9.0.2",
    "update>=0.0.1",
    "pydub>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/armanisadeghi/matrx-ai"
Repository = "https://github.com/armanisadeghi/matrx-ai"
Issues = "https://github.com/armanisadeghi/matrx-ai/issues"

[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "uvloop>=0.21.0",
    "sse-starlette>=2.2.0",
    "orjson>=3.10.0",
]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[project.scripts]
matrx-ai-server = "matrx_ai.app.main:start"

[dependency-groups]
# uv installs ALL groups in [dependency-groups] automatically on `uv sync`.
# These never appear on PyPI — they are local-only.
server = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "uvloop>=0.21.0",
    "sse-starlette>=2.2.0",
    "orjson>=3.10.0",
]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "hatch-vcs>=0.5.0",
]

[tool.uv]
# Include both groups automatically on plain `uv sync`.
# `dev` is the default; `server` must be listed explicitly to auto-include.
default-groups = ["dev", "server"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["templates/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
exclude = ["templates/"]
venvPath = "."
venv = ".venv"
reportCallIssue = "none"
reportArgumentType = "none"
reportOperatorIssue = "none"
reportAttributeAccessIssue = "none"
reportIndexIssue = "none"
reportReturnType = "none"
reportMissingTypeArgument = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python3"
python-version = "3.13"
search-path = ["."]
site-package-path = [".venv/lib/python3.13/site-packages"]
